Add java_opt